objects/PIT_SCH__Audit_Response__c.object
<CustomObject>
    <fields>
        <fullName>PIT_SCH__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Pitcher Audit Responses</relationshipLabel>
        <relationshipName>Audit_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PIT_SCH__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Audit Responses</relationshipLabel>
        <relationshipName>Audit_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PIT_SCH__ExternalID__c</fullName>
        <externalId>true</externalId>
        <label>ExternalID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PIT_SCH__From_Last_Audit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>From Last Audit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PIT_SCH__Information_on_SE_equipment__c</fullName>
        <label>Information on SE equipment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PIT_SCH__Information_on_competitors__c</fullName>
        <label>Information on competitors</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PIT_SCH__Information_on_electrical_market__c</fullName>
        <label>Information on electrical market</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PIT_SCH__MigrationID__c</fullName>
        <externalId>true</externalId>
        <label>MigrationID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PIT_SCH__Pitcher_Account_Extension__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pitcher Account Extension</label>
        <referenceTo>PIT_SCH__Account_Extension__c</referenceTo>
        <relationshipLabel>Pitcher Audit Responses</relationshipLabel>
        <relationshipName>Pitcher_Audit_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PIT_SCH__Presentation_Date__c</fullName>
        <formula>PIT_SCH__Visit__r.PITCHER__Presentation_Date__c</formula>
        <label>Presentation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PIT_SCH__Visit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pitcher Visit</label>
        <referenceTo>PITCHER__Pitcher_Presentation__c</referenceTo>
        <relationshipName>Audit_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Pitcher Audit Response</label>
    <listViews>
        <fullName>PIT_SCH__All</fullName>
        <columns>NAME</columns>
        <columns>PIT_SCH__Account__c</columns>
        <columns>PIT_SCH__Contact__c</columns>
        <columns>PIT_SCH__Visit__c</columns>
        <columns>PIT_SCH__Presentation_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>PIT_SCH__From_Last_Audit__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>test</fullName>
        <columns>NAME</columns>
        <columns>PIT_SCH__Account__c</columns>
        <columns>PIT_SCH__Contact__c</columns>
        <columns>PIT_SCH__Visit__c</columns>
        <columns>PIT_SCH__Presentation_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>PIT_SCH__From_Last_Audit__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PIT_SCH__Visit__c</field>
            <operation>equals</operation>
            <value>PP-001A000000zcxgAIAQ</value>
        </filters>
        <label>test</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>AR-{0000}</displayFormat>
        <label>Audit Response Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pitcher Audit Responses</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>